--- a/client/src/components/SubscribedList.css
+++ b/client/src/components/SubscribedList.css
@@ -1,15 +1,30 @@
 .grid-container {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
+    /* row-gap: 0px; */
+    padding: 4px
+
+
 }
 
 .grid-container img {
-    width: 33vw;
+    max-width: 100%;
     border-radius: 5px;
+    /* row-gap:-5px; */
+
+
 }
 
+.box{
+    margin-bottom: -4px;
+    padding: 2px;
+
+
+    
+}
 box img{
-    border-radius: 5px;
+    
+    
 }
 
 @media (min-width:768px) {
@@ -18,7 +33,7 @@ box img{
         grid-template-columns: repeat(5, 1fr);
     }
     .grid-container img {
-        width: 20vw;
+        max-width: 100%;
         border-radius: 5px;
     }
 }
